--- a/src/Bundle/CoreBundle/Resources/config/settings.yml
+++ b/src/Bundle/CoreBundle/Resources/config/settings.yml
@@ -13,6 +13,7 @@ parameters:
     accard.settings_schema.diagnosis.class: Accard\Bundle\CoreBundle\Settings\DiagnosisSettingsSchema
     accard.settings_schema.activity.class: Accard\Bundle\CoreBundle\Settings\ActivitySettingsSchema
     accard.settings_schema.sample.class: Accard\Bundle\CoreBundle\Settings\SampleSettingsSchema
+    accard.settings_schema.regimen.class: Accard\Bundle\CoreBundle\Settings\RegimenSettingsSchema
     accard.settings_schema.behavior.class: Accard\Bundle\CoreBundle\Settings\BehaviorSettingsSchema
     accard.settings_schema.attribute.class: Accard\Bundle\CoreBundle\Settings\AttributeSettingsSchema
 
@@ -20,40 +21,36 @@ services:
 
     accard.settings_schema.general:
         class: %accard.settings_schema.general.class%
-        tags:
-            - { name: accard.settings_schema, namespace: general }
+        tags: [{ name: accard.settings_schema, namespace: general }]
 
     accard.settings_schema.theme:
         class: %accard.settings_schema.theme.class%
-        tags:
-            - { name: accard.settings_schema, namespace: theme }
+        tags: [{ name: accard.settings_schema, namespace: theme }]
 
     accard.settings_schema.patient:
         class: %accard.settings_schema.patient.class%
-        tags:
-            - { name: accard.settings_schema, namespace: patient }
+        tags: [{ name: accard.settings_schema, namespace: patient }]
 
     accard.settings_schema.diagnosis:
         class: %accard.settings_schema.diagnosis.class%
-        tags:
-            - { name: accard.settings_schema, namespace: diagnosis }
+        tags: [{ name: accard.settings_schema, namespace: diagnosis }]
 
     accard.settings_schema.activity:
         class: %accard.settings_schema.activity.class%
-        tags:
-            - { name: accard.settings_schema, namespace: activity }
+        tags: [{ name: accard.settings_schema, namespace: activity }]
 
     accard.settings_schema.sample:
         class: %accard.settings_schema.sample.class%
-        tags:
-            - { name: accard.settings_schema, namespace: sample }
+        tags: [{ name: accard.settings_schema, namespace: sample }]
+
+    accard.settings_schema.regimen:
+        class: %accard.settings_schema.regimen.class%
+        tags: [{ name: accard.settings_schema, namespace: regimen }]
 
     accard.settings_schema.behavior:
         class: %accard.settings_schema.behavior.class%
-        tags:
-            - { name: accard.settings_schema, namespace: behavior }
+        tags: [{ name: accard.settings_schema, namespace: behavior }]
 
     accard.settings_schema.attribute:
         class: %accard.settings_schema.attribute.class%
-        tags:
-            - { name: accard.settings_schema, namespace: attribute }
+        tags: [{ name: accard.settings_schema, namespace: attribute }]
