--- a/src/Bundle/WebBundle/Resources/config/routing/frontend/main.yml
+++ b/src/Bundle/WebBundle/Resources/config/routing/frontend/main.yml
@@ -26,6 +26,10 @@ accard_frontend_sample:
     resource: @AccardWebBundle/Resources/config/routing/frontend/sample.yml
     prefix: /sample
 
+accard_frontend_regimen:
+    resource: @AccardWebBundle/Resources/config/routing/frontend/regimen.yml
+    prefix: /regimen
+
 accard_frontend_behavior:
     resource: @AccardWebBundle/Resources/config/routing/frontend/behavior.yml
     prefix: /behavior
