--- a/src/Bundle/WebBundle/Resources/config/routing/frontend/main.yml
+++ b/src/Bundle/WebBundle/Resources/config/routing/frontend/main.yml
@@ -18,6 +18,10 @@ accard_frontend_diagnosis:
     resource: @AccardWebBundle/Resources/config/routing/frontend/diagnosis.yml
     prefix: /diagnosis
 
+accard_frontend_regimen:
+    resource: @AccardWebBundle/Resources/config/routing/frontend/regimen.yml
+    prefix: /activity/regimen
+
 accard_frontend_activity:
     resource: @AccardWebBundle/Resources/config/routing/frontend/activity.yml
     prefix: /activity
@@ -25,10 +29,6 @@ accard_frontend_activity:
 accard_frontend_sample:
     resource: @AccardWebBundle/Resources/config/routing/frontend/sample.yml
     prefix: /sample
-
-accard_frontend_regimen:
-    resource: @AccardWebBundle/Resources/config/routing/frontend/regimen.yml
-    prefix: /regimen
 
 accard_frontend_behavior:
     resource: @AccardWebBundle/Resources/config/routing/frontend/behavior.yml
