--- a/src/Bundle/WebBundle/Resources/config/routing/frontend/activity.yml
+++ b/src/Bundle/WebBundle/Resources/config/routing/frontend/activity.yml
@@ -45,7 +45,7 @@ accard_frontend_activity_create:
         _accard:
             template: AccardWebBundle:Frontend/Activity:create.html.twig
             redirect:
-                route: accard_frontend_activity_show
+                route: accard_frontend_activity_index_by_prototype
                 parameters: { prototype: resource.prototype.name, id: resource.id }
 
 accard_frontend_activity_update:
@@ -57,7 +57,7 @@ accard_frontend_activity_update:
         _accard:
             template: AccardWebBundle:Frontend/Activity:update.html.twig
             redirect:
-                route: accard_frontend_activity_show
+                route: accard_frontend_activity_index_by_prototype
                 parameters: { prototype: resource.prototype.name, id: resource.id }
 
 accard_frontend_activity_delete:
@@ -68,4 +68,6 @@ accard_frontend_activity_delete:
         _controller: accard.controller.activity:deleteAction
         _accard:
             template: AccardWebBundle:Frontend/Activity:delete.html.twig
-            redirect: accard_frontend_activity_index
+            redirect:
+                route: accard_frontend_activity_index_by_prototype
+                parameters: { prototype: resource.prototype.name, id: resource.id }
