--- a/src/Bundle/CoreBundle/Resources/config/validation.yml
+++ b/src/Bundle/CoreBundle/Resources/config/validation.yml
@@ -5,6 +5,42 @@
 # For the full copyright and license information, please view the LICENSE
 # file that was distributed with this source code.
 
+Accard\Component\Core\Model\Patient:
+    properties:
+        diagnoses:
+            - Valid: ~
+            - All:
+                - Type: { type: Accard\Component\Diagnosis\Model\DiagnosisInterface, message: accard.patient.diagnoses.type, groups: ['accard'] }
+        activities:
+            - Valid: ~
+            - All:
+                - Type: { type: Accard\Component\Activity\Model\ActivityInterface, message: accard.patient.activities.type, groups: ['accard'] }
+        behaviors:
+            - Valid: ~
+            - All:
+                - Type: { type: Accard\Component\Behavior\Model\BehaviorInterface, message: accard.patient.behaviors.type, groups: ['accard'] }
+        attributes:
+            - Valid: ~
+            - All:
+                - Type: { type: Accard\Component\Attribute\Model\AttributeInterface, message: accard.patient.attributes.type, groups: ['accard'] }
+        phases:
+            - Valid: ~
+            - All:
+                - Type: { type: Accard\Component\Core\Model\PatientPhaseInterface, message: accard.patient.phases.type, groups: ['accard'] }
+
+Accard\Component\Core\Model\Diagnosis:
+    properties:
+        startDate:
+            - Expression: { expression: "this.getPatient().getDateOfBirth() < value" , message: accard.diagnosis.start_date.before_birth, groups: ['accard']}
+        endDate:
+            - Expression: { expression: "this.getPatient().getDateOfDeath() > value" , message: accard.diagnosis.end_date.after_death, groups: ['accard']}
+        patient:
+            - Type: { type: Accard\Component\Patient\Model\PatientInterface, message: accard.diagnosis.patient.type, groups: ['accard'] }
+        phases:
+            - Valid: ~
+            - All:
+                - Type: { type: Accard\Component\Core\Model\DiagnosisPhaseInterface, message: accard.diagnosis.phases.type, groups: ['accard'] }
+
 Accard\Component\Core\Model\Activity:
     properties:
         patient:
