--- a/src/Bundle/DiagnosisBundle/Resources/config/validation.yml
+++ b/src/Bundle/DiagnosisBundle/Resources/config/validation.yml
@@ -6,21 +6,61 @@
 # file that was distributed with this source code.
 
 Accard\Component\Diagnosis\Model\Diagnosis:
-    properties: ~
-    getters: ~
+    properties:
+        parent:
+            - Valid: ~
+            - Type: { type: Accard\Component\Diagnosis\Model\DiagnosisInterface, message: accard.diagnosis.parent.type, groups: ['accard'] }
+        primary:
+            - Valid: ~
+            - Type: { type: Accard\Component\Diagnosis\Model\DiagnosisInterface, message: accard.diagnosis.primary.type, groups: ['accard'] }
+        code:
+            - Valid: ~
+            - Type: { type: Accard\Component\Diagnosis\Model\CodeInterface, message: accard.diagnosis.code.type, groups: ['accard'] }
+        startDate:
+            - NotBlank: { message: accard.diagnosis.start_date.not_blank, groups: ['accard'] }
+            - DateTime: { message: accard.diagnosis.start_date.datetime, groups: ['accard'] }
+        endDate:
+            - DateTime: { message: accard.diagnosis.end_date.datetime, groups: ['accard'] }
+        recurrences:
+            - Valid: ~
+            - All:
+                - Type: { type: Accard\Component\Diagnosis\Model\DiagnosisInterface, message: accard.diagnosis.recurrences.type, groups: ['accard']}
+        comorbidities:
+            - Valid: ~
+            - All:
+                - Type: { type: Accard\Component\Diagnosis\Model\DiagnosisInterface, message: accard.diagnosis.comorbidities.type, groups: ['accard'] }
+        fields:
+            - Valid: ~
+            - All:
+                - Type: { type: Accard\Component\Field\Model\FieldValueInterface, message: accard.diagnosis.fields.type, groups: ['accard'] }
 
-Accard\Component\Diagnosis\Model\Field:
-    properties: ~
-    getters: ~
-
-Accard\Component\Diagnosis\Model\FieldValue:
-    properties: ~
-    getters: ~
+Accard\Component\Diagnosis\Model\Field: ~
+Accard\Component\Diagnosis\Model\FieldValue: ~
 
 Accard\Component\Diagnosis\Model\Code:
-    properties: ~
-    getters: ~
+    properties:
+        code:
+            - NotBlank: { message: accard.diagnosis_code.code.not_blank, groups: ['accard'] }
+            - Length: { min: 1, max: 60, minMessage: accard.diagnosis_code.code.length.min, maxMessage: accard.diagnosis_code.code.length.max, groups: ['accard'] }
+        description:
+            - NotBlank: { message: accard.diagnosis_code.description.not_blank, groups: ['accard'] }
+            - Length: { min: 1, max: 120, minMessage: accard.diagnosis_code.description.length.min, maxMessage: accard.diagnosis_code.description.length.max, groups: ['accard'] }
+        groups:
+            - Valid: ~
+            - All:
+                - Type: { type: Accard\Component\Diagnosis\Model\CodeGroupInterface, message: accard.diagnosis_code.groups.type, groups: ['accard'] }
 
 Accard\Component\Diagnosis\Model\CodeGroup:
-    properties: ~
-    getters: ~
+    properties:
+        name:
+            - NotBlank: { message: accard.diagnosis_code_group.name.not_blank, groups: ['accard'] }
+            - Regex: { pattern: "/^[a-z0-9-]+$/", message: accard.diagnosis_code_group.name.slug, groups: ['accard'] }
+            - Length: { min: 3, max: 120, minMessage: accard.diagnosis_code_group.name.length.min, maxMessage: accard.diagnosis_code_group.name.length.max, groups: ['accard'] }
+        presentation:
+            - NotBlank: { message: accard.diagnosis_code_group.presentation.not_blank, groups: ['accard'] }
+            - Length: { min: 3, max: 120, minMessage: accard.diagnosis_code_group.presentation.length.min, maxMessage: accard.diagnosis_code_group.presentation.length.max, groups: ['accard'] }
+        codes:
+            - Valid: ~
+            - All:
+                - Type: { type: Accard\Component\Diagnosis\Model\CodeInterface, message: accard.diagnosis_code_group.codes.type, groups: ['accard'] }
+
