--- a/src/Bundle/PatientBundle/Resources/config/validation.yml
+++ b/src/Bundle/PatientBundle/Resources/config/validation.yml
@@ -6,35 +6,35 @@
 # file that was distributed with this source code.
 
 Accard\Component\Patient\Model\Patient:
-
+    constraints:
+        - Symfony\Bridge\Doctrine\Validator\Constraints\UniqueEntity: { fields: "mrn", message: accard.patient.mrn.unique, groups: ['accard'] }
     properties:
-
         mrn:
             - Regex: { pattern: "/^[0-9]{9}$/", message: accard.patient.mrn.regex, groups: ['accard'] }
         firstName:
-            - NotBlank: { message: accard.patient.firstName.not_blank, groups: ['accard'] }
-            - Length: { min: 3, max: 36, minMessage: accard.patient.firstName.length.min, maxMessage: accard.patient.firstName.length.max, groups: ['accard'] }
+            - NotBlank: { message: accard.patient.first_name.not_blank, groups: ['accard'] }
+            - Length: { min: 3, max: 36, minMessage: accard.patient.first_name.length.min, maxMessage: accard.patient.first_name.length.max, groups: ['accard'] }
         lastName:
-            - NotBlank: { message: accard.patient.lastName.not_blank, groups: ['accard'] }
-            - Length: { min: 3, max: 36, minMessage: accard.patient.lastName.length.min, maxMessage: accard.patient.lastName.length.max, groups: ['accard'] }
+            - NotBlank: { message: accard.patient.last_name.not_blank, groups: ['accard'] }
+            - Length: { min: 3, max: 36, minMessage: accard.patient.last_name.length.min, maxMessage: accard.patient.last_name.length.max, groups: ['accard'] }
         dateOfBirth:
-            - NotBlank: { message: accard.patient.dateOfBirth.not_blank, groups: ['accard'] }
-            - DateTime: { message: accard.patient.dateOfBirth.date, groups: ['accard'] }
+            - NotBlank: { message: accard.patient.date_of_birth.not_blank, groups: ['accard'] }
+            - DateTime: { message: accard.patient.date_of_birth.date, groups: ['accard'] }
         dateOfDeath:
-            - DateTime: { message: accard.patient.dateOfDeath.date, groups: ['accard'] }
+            - DateTime: { message: accard.patient.date_of_death.date, groups: ['accard'] }
         gender:
             - NotBlank: { message: accard.patient.gender.not_blank, groups: ['accard'] }
-            - Valid: ~
+            - Type: { type: Accard\Component\Option\Model\OptionValueInterface, message: accard.patient.gender.type, groups: ['accard'] }
         race:
             - NotBlank: { message: accard.patient.race.not_blank, groups: ['accard'] }
-            - Valid: ~
+            - Type: { type: Accard\Component\Option\Model\OptionValueInterface, message: accard.patient.race.type, groups: ['accard'] }
         fields:
             - Valid: ~
-
+            - All:
+                - Type: { type: Accard\Component\Field\Model\FieldValueInterface, message: accard.patient.fields.type, groups: ['accard'] }
     getters:
-
         dateOfDeathValid:
-            - "True": { message: accard.patient.dateOfDeath.valid, groups: ['accard'] }
+            - "True": { message: accard.patient.date_of_death.valid, groups: ['accard'] }
 
-Accard\Component\Patient\Model\Field:
-Accard\Component\Patient\Model\FieldValue:
+Accard\Component\Patient\Model\Field: ~
+Accard\Component\Patient\Model\FieldValue: ~
