--- a/src/Bundle/FieldBundle/Resources/config/doctrine/model/Field.orm.yml
+++ b/src/Bundle/FieldBundle/Resources/config/doctrine/model/Field.orm.yml
@@ -7,6 +7,7 @@
 
 Accard\Component\Field\Model\Field:
     type: mappedSuperclass
+    repositoryClass: Accard\Bundle\FieldBundle\Doctrine\ORM\FieldRepository 
 
     id:
         id:
