Added signals system to importer, and implemented it in the web interface. The accept button now contains multiple options if the accard_resource.import.signals array contains values.

--- a/src/Bundle/ResourceBundle/Resources/config/twig.yml
+++ b/src/Bundle/ResourceBundle/Resources/config/twig.yml
@@ -17,6 +17,7 @@ services:
         class: %accard.twig.extension.resource.class%
         arguments:
             - @router
+            - %accard.import.signals%
             - %accard.twig.extension.resource.pagination_template%
             - %accard.twig.extension.resource.sorting_template%
         tags:
