Incorporated user bundle into core work.

--- a/src/Bundle/CoreBundle/Resources/config/app/accard.yml
+++ b/src/Bundle/CoreBundle/Resources/config/app/accard.yml
@@ -8,6 +8,9 @@
 accard_core:
     driver: doctrine/orm
 
+accard_user:
+    remote_user: %accard_remote_user%
+
 accard_resource: ~
 accard_settings: ~
 accard_phase: ~
