Option values are now able to be locked.

--- a/src/Bundle/OptionBundle/Resources/config/doctrine/model/OptionValue.orm.yml
+++ b/src/Bundle/OptionBundle/Resources/config/doctrine/model/OptionValue.orm.yml
@@ -19,6 +19,8 @@ Accard\Component\Option\Model\OptionValue:
         value:
             type: string
             nullable: false
+        locked:
+            type: boolean
 
     manyToOne:
         option:
