--- a/src/Bundle/CoreBundle/Resources/config/services.yml
+++ b/src/Bundle/CoreBundle/Resources/config/services.yml
@@ -10,6 +10,7 @@ parameters:
     accard.form.extension.accard_attribute.class: Accard\Bundle\CoreBundle\Form\Extension\AttributeTypeExtension
     accard.provider.import_patient.class: Accard\Bundle\CoreBundle\Provider\ImportPatientProvider
     accard.provider.import_activity.class: Accard\Bundle\CoreBundle\Provider\ImportActivityProvider
+    accard.provider.import_sample.class: Accard\Bundle\CoreBundle\Provider\ImportSampleProvider
     accard.fixture.manager.class: Accard\Bundle\CoreBundle\DataFixtures\FixtureManager
     accard.fixture.option_builder.class: Accard\Bundle\CoreBundle\DataFixtures\OptionBuilder
     accard.fixture.option_value_builder.class: Accard\Bundle\CoreBundle\DataFixtures\OptionValueBuilder
@@ -26,6 +27,11 @@ services:
         class: %accard.provider.import_activity.class%
         argument:
             - @accard.repository.import_activity
+
+    accard.provider.import_sample:
+        class: %accard.provider.import_sample.class%
+        argument:
+            - @accard.repository.import_sample
 
     accard.fixture.manager:
         class: %accard.fixture.manager.class%
