--- a/src/Bundle/SampleBundle/Resources/config/doctrine/model/Sample.orm.yml
+++ b/src/Bundle/SampleBundle/Resources/config/doctrine/model/Sample.orm.yml
@@ -35,4 +35,4 @@ Accard\Component\Sample\Model\Sample:
             targetEntity: Accard\Component\Sample\Model\FieldValueInterface
             mappedBy: subject
             orphanRemoval: true
-            cascade: ["all"]
+            cascade: ["persist", "remove"]
