Forgot to add the cascading persistance to Activities

--- a/src/Bundle/ActivityBundle/Resources/config/doctrine/model/Activity.orm.yml
+++ b/src/Bundle/ActivityBundle/Resources/config/doctrine/model/Activity.orm.yml
@@ -24,4 +24,4 @@ Accard\Component\Activity\Model\Activity:
             targetEntity: Accard\Component\Activity\Model\FieldValueInterface
             mappedBy: subject
             orphanRemoval: true
-            cascade: ["all"]
+            cascade: ["persist", "remove"]
