Added allowDrug for activity prototypes, this will serve as the basis for collecting drugs within activities.

--- a/src/Bundle/ActivityBundle/Resources/config/doctrine/model/Activity.orm.yml
+++ b/src/Bundle/ActivityBundle/Resources/config/doctrine/model/Activity.orm.yml
@@ -19,6 +19,13 @@ Accard\Component\Activity\Model\Activity:
             type: date
             nullable: false
 
+    manyToOne:
+        drug:
+            targetEntity: Accard\Component\Drug\Model\DrugInterface
+            joinColumn:
+                name: drugId
+                nullable: true
+
     oneToMany:
         fields:
             targetEntity: Accard\Component\Activity\Model\FieldValueInterface
