Added optional drug selection to regimens.

--- a/src/Bundle/RegimenBundle/Resources/config/doctrine/model/Prototype.orm.yml
+++ b/src/Bundle/RegimenBundle/Resources/config/doctrine/model/Prototype.orm.yml
@@ -8,3 +8,8 @@
 Accard\Component\Regimen\Model\Prototype:
     type: mappedSuperclass
     table: accard_regimen_prototype
+
+    fields:
+        allowDrug:
+            type: boolean
+            nullable: false
