--- a/src/Bundle/RegimenBundle/Resources/config/doctrine/model/Regimen.orm.yml
+++ b/src/Bundle/RegimenBundle/Resources/config/doctrine/model/Regimen.orm.yml
@@ -22,6 +22,13 @@ Accard\Component\Regimen\Model\Regimen:
             type: datetime
             nullable: true
 
+    manyToOne:
+        drug:
+            targetEntity: Accard\Component\Drug\Model\DrugInterface
+            joinColumn:
+                name: drugId
+                nullable: true
+
     oneToMany:
         fields:
             targetEntity: Accard\Component\Regimen\Model\FieldValueInterface
