--- a/src/Bundle/RegimenBundle/Resources/config/doctrine/model/Prototype.orm.yml
+++ b/src/Bundle/RegimenBundle/Resources/config/doctrine/model/Prototype.orm.yml
@@ -13,3 +13,10 @@ Accard\Component\Regimen\Model\Prototype:
         allowDrug:
             type: boolean
             nullable: false
+
+    manyToOne:
+        drugGroup:
+            targetEntity: Accard\Component\Drug\Model\DrugGroupInterface
+            joinColumn:
+                name: drugGroupId
+                nullable: true
