--- a/src/Bundle/RegimenBundle/Resources/config/doctrine/model/Prototype.orm.yml
+++ b/src/Bundle/RegimenBundle/Resources/config/doctrine/model/Prototype.orm.yml
@@ -12,7 +12,7 @@ Accard\Component\Regimen\Model\Prototype:
     fields:
         allowDrug:
             type: boolean
-            nullable: false
+            nullable: true
 
     manyToOne:
         drugGroup:
